# spot-finder

./: .gitmodules  Cargo.toml  Dockerfile  README.md  stuttgart_link.txt
.github/workflows/: autoupdate.yml  test.yml
src/: direction.rs  location.rs  main.rs  messaging_common.rs  search_messages.rs  spot_finder.rs
