[package]
name = "spot-finder"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-nats = "0.28.0"
bytes = "1.4.0"
futures-util = "0.3.26"
osm-xml = "0.6.2"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.94"
tokio = "1.26.0"
